# kaditaj-core

./: LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
core/: context.py  forms.py  requirements.txt  tasks.py  urls.py
core/migrations/: 0001_initial.py  0002_initial.py
core/models/: __init__.py  approbation.py  base.py  flow.py  importer.py  job.py  menu.py  organization.py  template.py  user.py  widget.py
core/models/fields/: choice_field.py  model_select_field.py  model_select_to_signle_field.py  select_list_create_choice_field.py
core/models/managers/: __init__.py  approbation.py  base.py  user.py
core/signals/: __init__.py  importer.py  user.py
core/static/autocomplete_light/: select2.js  select2.min.js
core/template/: base.html  change.html  create.html  delete.html  home.html
core/template/components/: change_form.html
core/template/employee/: employee.html
core/template/onafriq/: payouts.html
core/template/registration/: login.html
core/templates/: approve.html  base.html  change.html  create.html  delete.html  home.html  list.html  read.html
core/templates/components/: change_form.html  read_form.html  timeline.html
core/templates/core/: flow.html
core/templatetags/: core.py
core/views/: __init__.py  action_required.py  approbation.py  home.py  template.py
core/views/base/: base.py  change.py  create.py  list.py  read.py
core/views/notification/: visit.py
django_kaditaj_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
kaditaj_core.egg-info/: PKG-INFO  SOURCES.txt
