[metadata]
name = kaditaj-core
version = 1.0.0
description = Base core for kaditaj project
long_description = file: README.rst
url = https://github.com/tbro2020/kaditaj-core
author = Christian TABARO
author_email = christian@tabaro.me
license = BSD-3-Clause 
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    
[options]
include_package_data = true
packages = find: